--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -5,16 +5,11 @@
 <form action="/compose" method="post">
   <label for="title" class="form-label">Title</label>
   <br>
-  <input type="text" name="userInput" class="form-control" id="title" autocomplete="off">
+  <input type="text" name="postTitle" class="form-control" id="title" autocomplete="off">
   <label for="postText" class="form-label">Post</label>
-  <textarea class="form-control" placeholder="Leave a comment here" id="textArea"></textarea>
+  <textarea class="form-control" name="postBody" placeholder="Leave a comment here" id="textArea" required></textarea>
   <br>
   <button type="submit" class="btn btn-primary">Publish</button>
 </form>
-
-
-
-
-
 
 <%- include('partials/footer') -%>
